aws/mfa/mfa_cft.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Paraview MFA Standalone FREE edition for AWS Cloudformation Template ver 1.0

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Select an existing VPC

  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Select a public subnet within the chosen VPC

  InstanceType:
    Type: String
    Default: m5.xlarge
    Description: Select the EC2 instance type
    AllowedValues:
      - t3.xlarge
      - m5.xlarge
      - m4.xlarge

  ImageId:
    Type: AWS::EC2::Image::Id
    Default: ami-0f979511befd35252
    
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Select the existing key pair
    ConstraintDescription: Select the existing key pair

  SshCidr:
    Description: 'Please enter the CIDR block for SSH access (e.g., 0.0.0.0/0 or 192.168.0.0/16)'
    Type: String
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
    ConstraintDescription: 'Must be a valid CIDR block in the format x.x.x.x/n'

  DefaultCidr:
    Description: 'Please enter the 0.0.0.0/0 by default. Else you will not allow to access the portal.'
    Type: String
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
    ConstraintDescription: 'Please enter the 0.0.0.0/0 here. Else you will not allow to access the portal.'

Resources:
  WaitHandle:
    Type: AWS::CloudFormation::WaitConditionHandle

  WaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    Properties:
      Handle: !Ref WaitHandle
      Timeout: '2700'
      Count: 1

  LambdaExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join ['-', ['para-mfa-IAMRole-free', !Ref 'AWS::Region']]
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: !Join ['-', ['para-mfa-IAMPolicy-free', !Ref 'AWS::Region']]
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - ec2:DescribeVpcs
                Resource: '*'
      Tags:
        - Key: Name
          Value: !Join ['-', ['para-mfa-IAMRole-free', !Ref 'AWS::Region']]

  GetVpcCidrFunction:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: !Join ['-', ['para-mfa-LambdaFunction-free', !Ref 'AWS::Region']]
      Handler: index.handler
      Role: !GetAtt LambdaExecutionRole.Arn
      Runtime: python3.12
      Code:
        ZipFile: |
          import boto3
          import cfnresponse
          def handler(event, context):
              ec2 = boto3.client('ec2')
              vpc_id = event['ResourceProperties']['VpcId']
              try:
                  response = ec2.describe_vpcs(VpcIds=[vpc_id])
                  cidr_block = response['Vpcs'][0]['CidrBlock']
                  cfnresponse.send(event, context, cfnresponse.SUCCESS, {'VpcCidr': cidr_block})
              except Exception as e:
                  print(f"Error: {str(e)}")
                  cfnresponse.send(event, context, cfnresponse.FAILED, {'Error': str(e)})
      Timeout: 60
      Tags:
        - Key: Name
          Value: !Join ['-', ['para-mfa-LambdaFunction-free', !Ref 'AWS::Region']]

  VpcCidrCustomResource:
    Type: Custom::GetVpcCidr
    Properties:
      ServiceToken: !GetAtt GetVpcCidrFunction.Arn
      VpcId: !Ref VpcId

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ['-', ['para-mfa-SecurityGroup-free', !Ref 'AWS::Region']]
      GroupDescription: Security group with specific ingress rules
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        # Allow SSH (port 22) from SshCidr
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SshCidr

        # Allow HTTPS (port 443) from anywhere
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref DefaultCidr

        # Allow HTTP (port 80) from anywhere
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref DefaultCidr

        # Allow all traffic within the VPC CIDR range
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: !GetAtt VpcCidrCustomResource.VpcCidr
      
      SecurityGroupEgress:
        # Allow all outbound traffic
        - IpProtocol: '-1'
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref DefaultCidr

      Tags:
        - Key: Name
          Value: !Join ['-', ['para-mfa-SecurityGroup-free', !Ref 'AWS::Region']]

  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Join ['-', ['para-mfa-EIP-free', !Ref 'AWS::Region']]

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: !Ref ImageId
      SubnetId: !Ref SubnetId
      SecurityGroupIds:
        - !Ref SecurityGroup
      UserData: 
        Fn::Base64: !Sub |
          #!/bin/bash
          /opt/script/mfa_config.sh ${SecurityGroup}
          sleep 3m
          echo "***end of ansible playbook deployment***"
          /opt/aws/bin/cfn-signal -e $? '${WaitHandle}' 
      Tags:
        - Key: Name
          Value: !Join ['-', ['para-mfa-EC2Instance-free', !Ref 'AWS::Region']]

  EIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt ElasticIP.AllocationId
      InstanceId: !Ref EC2Instance

Outputs:
  InstanceId:
    Description: ID of the EC2 instance
    Value: !Ref EC2Instance

  PublicIP:
    Description: Public IP address of the EC2 instance
    Value: !Ref ElasticIP

  DeploymentMessage:
    Description: The final output of the deployment
    Value: !Sub |
      Welcome to the Paraview MFA access portal: http://${ElasticIP} with credentail: sysadmin/${SecurityGroup} You will have 7 days license for your evaluation and testing. Thanks!
